--- a/views/plantilla.html
+++ b/views/plantilla.html
@@ -107,7 +107,7 @@
       <div class="container-fluid">
         <div class="copyright pull-left">{{=T('Copyright')}} &#169; {{=request.now.year}}</div>
           <div id="poweredBy" class="pull-right">
-            {{=T('Leonel Fernandes Maciel, Lucas Noguera, Maximiliano Carranza')}}
+            {{=T('Leonel Fernandes Maciel, Lucas Noguera')}}
           </div>
       </div>
     </footer>
