Nueva vista caracteristicas catalogo

--- a/views/catalogo/caracteristicas.html
+++ b/views/catalogo/caracteristicas.html
@@ -1,3 +1,135 @@
 {{extend 'layout.html'}}
-<h1>This is the catalogo/caracteristicas.html template</h1>
-{{=BEAUTIFY(response._vars)}}
+<h2>ESPECIFICACIONES T&EacuteCNICAS</h2>
+<div class="table-responsive"> 
+    <table class="table table-bordered table-striped"> 
+        <thead> 
+            <tr>
+                <th> <h3>Detalles
+                </h3></th> 
+            </tr>
+         </thead> 
+         <tbody> 
+             <tr> <th>Agenda</th> 
+                 <td>Sí</td>
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Graba Video</th> 
+                 <td> Sí</td> 
+             </tr> 
+             <tr> 
+                 <th class="text-nowrap" scope="row">Internet</th> 
+                 <td>Sí</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Juegos</th> 
+                 <td colspan="4">Sí</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Contactos</th> 
+                  <td class="text-nowrap">Sí</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Parlante Externo</th> 
+                 <td colspan="4">Sí</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Reproduce mp3</th> 
+                 <td colspan="4">Sí</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Reproduce Videos</th> 
+                 <td colspan="4">Sí</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Teclado</th> 
+                 <td colspan="4">Touch</td> 
+             </tr>
+             <tr> <th class="text-nowrap" scope="row">Color</th> 
+                 <td colspan="4">Blanco</td> 
+             </tr>
+        </tbody> 
+    </table> 
+</div>
+<br>
+<div class="table-responsive"> 
+    <table class="table table-bordered table-striped"> 
+        <thead> 
+            <tr>
+                <th> <h3>Caracteristicas
+                </h3></th> 
+            </tr>
+         </thead> 
+         <tbody>
+             <tr> <th class="text-nowrap" scope="row">Dimensiones</th> 
+                 <td> 151.7 x 76 x 7.8 mm</td> 
+             </tr> 
+             <tr> 
+                 <th class="text-nowrap" scope="row">Peso</th> 
+                 <td>169 grm</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">C&aacutemara Principal</th> 
+                 <td colspan="4">13 mp</td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">C&aacutemara Frontal</th> 
+                  <td class="text-nowrap">5 mp</td> 
+             </tr>
+             <tr> <th class="text-nowrap" scope="row">Flash</th> 
+                  <td class="text-nowrap">Sí</td> 
+             </tr>
+        </tbody> 
+    </table> 
+</div>
+<br>
+<div class="table-responsive"> 
+    <table class="table table-bordered table-striped"> 
+        <thead> 
+            <tr>
+                <th> <h3>Memoria
+                </h3></th> 
+            </tr>
+         </thead> 
+         <tbody> 
+             <tr> <th>Memoria Interna</th> 
+                 <td>16 gb</td>
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Disponible a</th> 
+                 <td> 128 gb</td> 
+             </tr> 
+             <tr> 
+                 <th class="text-nowrap" scope="row">Memoria Ram</th> 
+                 <td>2 gb </td> 
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Tipo de Memoria Expandible</th> 
+                 <td colspan="4">Micro SD</td> 
+             </tr>
+        </tbody> 
+    </table> 
+</div>
+<br>
+<div class="table-responsive"> 
+    <table class="table table-bordered table-striped"> 
+        <thead> 
+            <tr>
+                <th> <h3>Procesador
+                </h3></th> 
+            </tr>
+         </thead> 
+         <tbody> 
+             <tr> <th>Procesador</th> 
+                 <td>Octacore 1.6 ghz</td>
+             </tr>
+          </tbody> 
+    </table> 
+</div>
+<br>
+<div class="table-responsive"> 
+    <table class="table table-bordered table-striped"> 
+        <thead> 
+            <tr>
+                <th> <h3>Bateria
+                </h3></th> 
+            </tr>
+         </thead> 
+         <tbody> 
+             <tr> <th>Bateria</th> 
+                 <td>3300 mah</td>
+             </tr> 
+             <tr> <th class="text-nowrap" scope="row">Capacidad en hs </th> 
+                 <td> Hasta 23 hs en 3G</td> 
+             </tr> 
+         </tbody> 
+    </table> 
+</div>
