--- a/views/catalogo/index.html
+++ b/views/catalogo/index.html
@@ -51,8 +51,8 @@
                       </div>
 
                       <div class="">
-                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="estadisticas")}}">ESTADISTICAS</a>
-                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="comparar")}}">COMPARAR</a>
+                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="caracteristicas")}}">CARACTERISTICAS</a>
+                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="comparacion")}}">COMPARAR</a>
                       </div>
                       <hr>
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="index")}}">COMPRAR</a>
