Nueva vista comparacion catalogo

--- a/views/catalogo/caracteristicas.html
+++ b/views/catalogo/caracteristicas.html
@@ -1,8 +1,17 @@
 {{extend 'layout.html'}}
 <h2>ESPECIFICACIONES T&EacuteCNICAS</h2>
+<div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                  <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="index")}}">VOLVER</a>
+                  </div>
+                </div>
+</div>
+
 <div class="table-responsive"> 
     <table class="table table-bordered table-striped"> 
-        <thead> 
+        <thead>
+            <hr>
             <tr>
                 <th> <h3>Detalles
                 </h3></th> 
@@ -132,4 +141,11 @@
              </tr> 
          </tbody> 
     </table> 
+</div>
+<div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                  <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="index")}}">VOLVER</a>
+                  </div>
+                </div>
 </div>
