--- a/views/catalogo/comparacion.html
+++ b/views/catalogo/comparacion.html
@@ -1,3 +1,56 @@
 {{extend 'layout.html'}}
-<h1>This is the catalogo/comparacion.html template</h1>
-{{=BEAUTIFY(response._vars)}}
+<div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                      <div class="table-responsive"> 
+                        <table class="table table-bordered table-striped"> 
+                            <h2>
+                            SAMSUNG J7    
+                            </h2>
+                                <thead> 
+                                <tr>
+                                    <th> <h3>Procesador
+                                    </h3></th> 
+                                </tr>
+                             </thead> 
+                             <tbody> 
+                                 <tr> <th>Procesador</th> 
+                                     <td>Octacore 1.6 ghz</td>
+                                 </tr>
+                              </tbody> 
+                        </table> 
+                        </div>
+                   </div>
+                </div>
+</div>
+<div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-left top_search">
+                  <div class="input-group">
+                      <div class="table-responsive"> 
+                        <table class="table table-bordered table-striped">
+                            <h2>
+                            SAMSUNG A5    
+                            </h2>
+                                <thead> 
+                                <tr>
+                                    <th> <h3>Procesador
+                                    </h3></th> 
+                                </tr>
+                             </thead> 
+                             <tbody> 
+                                 <tr> <th>Procesador</th> 
+                                     <td>Octacore 1.6 ghz</td>
+                                 </tr>
+                              </tbody> 
+                        </table> 
+                        </div>
+                   </div>
+                </div>
+</div>
+<div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-center top_search">
+                  <div class="input-group">
+                  <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="index")}}">VOLVER</a>
+                  </div>
+                </div>
+</div>
