Nuevas vista del carrito

--- a/views/carrito/detalle.html
+++ b/views/carrito/detalle.html
@@ -1,3 +1,71 @@
 {{extend 'layout.html'}}
-<h1>This is the carrito/detalle.html template</h1>
-{{=BEAUTIFY(response._vars)}}
+<div class="right_col" role="main" style="min-height: 1014px;">
+
+          <div class="">
+            <div class="page-title">
+              <div class="title_left">
+                <h2><center>DETALLE DE COMPRAS</center></h2>
+              </div>
+                <div class="clearfix"></div>
+            <div class="row">
+              <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                  <div class="x_title">
+                    <h2>PRODUCTOS</h2>
+                    <hr>  
+                    <div class="col-md-7 col-sm-7 col-xs-12">
+                      <table class="table table-hover">
+                            <tr class="info">
+                                <th>SAMSUNG J7 </th>
+                                    <td> </td>
+                            </tr>
+                            </tr>
+                          <tr class="info">
+                                <th> </th>
+                                    <td> </td>
+                            </tr>
+                          <tr class="info">
+                                <th>SUBTOTAL </th>
+                              <td>$6500 </td>
+                            </tr>
+                          <tr class="info">
+                                <th>TOTAL </th>
+                                <td>$6500 </td>  
+                            </tr>
+                       </table>
+                      </div>
+                    </div>
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-left top_search">
+                  <div class="input-group">
+                      
+                    </span>
+                  </div>
+                </div>
+              </div> 
+<div class="">
+
+              </div>
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <label for="campo_tipo" class="col-sm-2 control-label">TIPO DE PAGO</label>
+            <div class="col-sm-2">
+               <select class="form-control" name="forma_pago" id="campo_tipo">
+                  <option>Efectivo</option>
+                  <option>Credito</option>
+                </select>
+            </div>
+            <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <span class="input-group-btn">
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="factura")}}">CONTINUAR</a>
+                    </span>
+                  </div>
+                </div>
+                    </div>         
+                  </div>
+                </div>
+    </div>
+    </div>
+</div>
