--- a/views/carrito/index.html
+++ b/views/carrito/index.html
@@ -1,3 +1,68 @@
 {{extend 'layout.html'}}
-<h1>This is the carrito/index.html template</h1>
-{{=BEAUTIFY(response._vars)}}
+<div class="right_col" role="main" style="min-height: 1014px;">
+
+          <div class="">
+            <div class="page-title">
+              <div class="title_left">
+                <h2><center>CARRITO DE COMPRAS</center></h2>
+              </div>
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-left top_search">
+                  <div class="input-group">
+                    <span class="input-group-btn">
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="index")}}">SEGUIR COMPRANDO</a>
+                    </span>
+                  </div>
+                </div>
+              </div>  
+              <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <span class="input-group-btn">
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="detalle")}}">FINALIZAR COMPRA</a>
+                    </span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+<table class="table table-hover">
+    <TR><TH>Producto</TH>
+        <TH>Cantidad</TH>
+        <TH>Disponibilidad</TH>
+        <TH>Precio</TH>
+        <TH>Subtotal</TH>
+    </TR>
+    <TR><TD>SAMSUNG GALAXY J7</TD>
+        <TD><label for="campo_numero_comprobante" class="col-sm-2 control-label"></label>
+            <div class="col-sm-2">
+                <input type="number" class="form-control" name="numero_comprobante" id="campo_numero_comprobante">
+            </div></TD>
+        <TD>Stock</TD>
+        <TD>$ 6500 </TD>
+        <TD>$ 6500 </TD>
+    </TR>
+</table>
+<br>
+<table class= "table table-hover">
+    <tr class="info"><th></th>
+                     <th></th>
+                     <th></th>
+                     <th> Subtotal : $ 6500 </th>
+                     <th> Total : $ 6500 </th>
+</table>
+<div class="input-group">
+                    <input class="form-control" placeholder="Ingrese Aqui su Codigo Postal..." type="text">
+                    <span class="input-group-btn">
+                      <button class="btn btn-default" type="button">CALCULAR COSTO DE ENVIO</button>
+    </span>
+    </div>
+<div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                  <div class="input-group">
+                    <span class="input-group-btn">
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="detalle")}}">FINALIZAR COMPRA</a>
+                    </span>
+                  </div>
+                </div>
