Actualizaciones de permisos

--- a/views/carrito/detalle.html
+++ b/views/carrito/detalle.html
@@ -51,7 +51,7 @@
                   <label for="campo_tipo" class="col-sm-2 control-label">TIPO DE PAGO</label>
             <div class="col-sm-2">
                <select class="form-control" name="forma_pago" id="campo_tipo">
-                  <option>Efectivo</option>
+                  <option>Debito</option>
                   <option>Credito</option>
                 </select>
             </div>
