--- a/views/catalogo/index.html
+++ b/views/catalogo/index.html
@@ -27,6 +27,7 @@
                     <hr>  
                     <div class="col-md-7 col-sm-7 col-xs-12">
                       <div class="product-image">
+                      {{=IMG(_src=URL("static","images/imagen.png"))}}
                       </div>
                     </div>
 
