--- a/views/compras/index.html
+++ b/views/compras/index.html
@@ -1,3 +1,3 @@
-{{extend 'layout.html'}}
-<h1>This is the compras/index.html template</h1>
-{{=BEAUTIFY(response._vars)}}
+{{extend 'plantilla.html'}}
+<H2>ARTICULOS</H2>
+{{=f}}
