Actualizaciones de la vistas de Supervisor y Administrador

--- a/views/compras/listado.html
+++ b/views/compras/listado.html
@@ -3,16 +3,15 @@
 LISTA DE COMPRAS
 </H2>
 <table class="table table-hover">
-    <TR><TH>N Factura</TH>
+    <TR><TH>N&uacutemero de Factura</TH>
         <TH>Fecha</TH>
-        <TH>P Unitario</TH>
+        <TH>Precio Unitario</TH>
         <TH>Proveedor</TH>
         <TH>Cantidad</TH>
         <TH>Detalle</TH>
         <TH>Total</TH>
-        <TH>Comprobante</TH>
     </TR>
-    {{for x in c:}}
+    {{for x in c: }}
     <TR><TD>{{=x.N_Factura}}</TD>
         <TD>{{=x.fecha}}</TD>
         <TD>{{=x.p_unitario}}</TD>
@@ -20,8 +19,6 @@ LISTA DE COMPRAS
         <TD>{{=x.cantidad}}</TD>
         <TD>{{=x.detalle}}</TD>
         <TD>{{=x.total}}</TD>
-        <TD>
-            <A button>COMPROBANTE</A>
-        </TD></TD></TR>
+    </TR>
     {{pass}}
 </TABLE>
