--- a/views/ventas/listado_ventas.html
+++ b/views/ventas/listado_ventas.html
@@ -17,5 +17,5 @@ VENTAS
         <TD>Samsung Galaxy J7</TD>
         <TD>$6500</TD>
         <TD>Debito</TD>
-        <TD>En Proceso</TD>
+        <TD><a type="button" class="btn btn-default btn-lg">CONFIRMAR PEDIDO</a> - <a type="button" class="btn btn-default btn-lg">CANCELAR PEDIDO</a></TD>
 </TABLE>
