--- a/views/default/index.html
+++ b/views/default/index.html
@@ -37,6 +37,11 @@
   <div class="clearfix visible-xs-block"></div>
   <div class="col-xs-6 col-sm-4"></div>
 </div>
+<div class="">
+    <button type="button" class="btn btn-default btn-lg">SAMSUNG</button>
+    <button type="button" class="btn btn-default btn-lg">MOTOROLA</button>
+</div>
+
 <!--ol>
   <li>{{=T('You are successfully running web2py')}}</li>
   <li>{{=XML(T('You visited the url %s', A(request.env.path_info,_href=request.env.path_info)))}}</li>
