actualizo controlador catalogo index y vista index

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -33,7 +33,7 @@
 </div>
 <div class="row">
   <div class="col-xs-6 col-sm-4"></div>
-  <div class="col-xs-6 col-sm-4"><a href="{{=URL(c="catalogo",f="index")}}" class="btn btn-success" role="button">CATALOGO</a> </div>
+  <div class="col-xs-6 col-sm-4"><a href="{{=URL(c="catalogo",f="inicio")}}" class="btn btn-success" role="button">CATALOGO</a> </div>
   <div class="clearfix visible-xs-block"></div>
   <div class="col-xs-6 col-sm-4"></div>
 </div>
