--- a/views/default/index.html
+++ b/views/default/index.html
@@ -39,7 +39,7 @@
 </div>
 <div class="">
     <button type="button" class="btn btn-default btn-lg">SAMSUNG</button>
-    <button type="button" class="btn btn-default btn-lg">MOTOROLA</button>
+    <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="motorola")}}">MOTOROLA</a>
 </div>
 
 <!--ol>
