modificaciones al nuevo catalogo

--- a/views/catalogo/inicio.html
+++ b/views/catalogo/inicio.html
@@ -4,9 +4,8 @@
 
         <!-- Jumbotron Header -->
         <header class="jumbotron hero-spacer">
-            <h1>Bien venido a StorePhone!</h1>
-            <p>En este catalogo podra ver todos los equipos con los que contamos a la venta.
-                Recurde que para comprar un producto debe registrarse en el sistema.</p>
+            <h1>Bienvenido a StorePhone!</h1>
+            <p>En este catalogo podra ver todos los equipos con los que contamos a la venta.<br>Recuerde que para comprar un producto debe registrarse en el sistema.</p>
             <p><a class="btn btn-primary btn-large">Dar LINK!</a>
             </p>
         </header>
