--- a/views/catalogo/index.html
+++ b/views/catalogo/index.html
@@ -56,7 +56,7 @@
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="comparacion")}}">COMPARAR</a>
                       </div>
                       <hr>
-                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="index")}}">COMPRAR</a>
+                        <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="default",f="index")}}">VOLVER</a>
               </div>
             </div>
           </div>
