--- a/views/catalogo/caracteristicas.html
+++ b/views/catalogo/caracteristicas.html
@@ -3,7 +3,7 @@
 <div class="title_right">
                 <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                   <div class="input-group">
-                  <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="index")}}">VOLVER</a>
+                  <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="default",f="index")}}">VOLVER</a>
                   </div>
                 </div>
 </div>
