adaptacion de ventas a compras, en ventas.py

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+{{extend 'plantilla.html'}}
 <!-- Page Content -->
     <div class="container">
 
@@ -6,8 +6,6 @@
         <header class="jumbotron hero-spacer">
             <h1>Bienvenido a StorePhone!</h1>
             <p>En este catalogo podra ver todos los equipos con los que contamos a la venta.<br>Recuerde que para comprar un producto debe registrarse en el sistema.</p>
-            <p><a class="btn btn-primary btn-large">Dar LINK!</a>
-            </p>
         </header>
 
         <hr>
@@ -74,26 +72,3 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </footer>
-
-    </div>
-    <!-- /.container -->
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
