--- a/views/ventas/detalle_ventas.html
+++ b/views/ventas/detalle_ventas.html
@@ -2,7 +2,7 @@
 <h1>DETALLE DE VENTA</h1>
 <div class="form-group">
     <h4><caption>Nro. Comprobante {{=nro_cbte}} Fecha {{=fecha}} 
-                 Cliente {{=reg_cliente.nombre}} CUIL {{=reg_cliente.cuil}}
+                 Proveedor {{=reg_proveedor.nombre}} 
         </caption></h4>
 </div>
 <form class="form-horizontal" action="{{=URL(c="ventas", f="detalle_ventas")}}" enctype="multipart/form-data" method="POST">
