--- a/views/ventas/inicio_ventas.html
+++ b/views/ventas/inicio_ventas.html
@@ -1,14 +1,12 @@
 {{extend 'layout.html'}}
 <h1>REGISTRAR FACTURA</h1>
-
-
 <form class="form-horizontal" action="{{=URL(c="ventas", f="detalle_ventas")}}" enctype="multipart/form-data" method="POST">
 <div class="form-group">
-            <label for="campo_cliente" class="col-sm-1 control-label">CLIENTE</label>
+            <label for="campo_proveedor" class="col-sm-1 control-label">PROVEEDOR</label>
             <div class="col-sm-2">
-               <select class="form-control" id="campo_cliente" name="id_cliente">
-                  {{for reg_cliente in lista_clientes:}}
-                  <option value="{{=reg_cliente.id}}">{{=reg_cliente.nombre}}</option>
+               <select class="form-control" id="campo_proveedor" name="id_proveedor">
+                  {{for reg_proveedor in lista_proveedor:}}
+                  <option value="{{=reg_proveedor.id}}">{{=reg_proveedor.nombre}}</option>
                   {{pass}}
                 </select>
             </div>
@@ -22,16 +20,6 @@
             <div class="col-sm-2">
                 <input type="date" class="form-control" name="fecha" id="campo_fecha">
             </div>
-            <label for="campo_tipo" class="col-sm-2 control-label">TIPO DE PAGO</label>
-            <div class="col-sm-2">
-               <select class="form-control" name="forma_pago" id="campo_tipo">
-                  <option>Efectivo</option>
-                  <option>Credito</option>
-                </select>
-            </div>
-    </div>
-    <div class="form-group">
-        <label for="campo_obs" class="col-sm-1 control-label">OBSERVACIONES</label>
     </div>
     <div class="form-group">
         <div class="col-sm-6">
@@ -40,14 +28,14 @@
     </div>
     <div class="form-group">
         <div class="col-md-3">
-          <input type="submit" name="boton_enviar" class="btn btn-default" value="AGREGAR PRODUCTOS">
+             <input type="submit" name="boton_enviar" class="btn btn-default" value="AGREGAR PRODUCTO">
         </div>
     </div>
 </form>
-    <form class="form-horizontal" action="{{=URL(c="altas", f="alta_cliente")}}" enctype="multipart/form-data" method="POST">
+    <form class="form-horizontal" action="{{=URL(c="altas", f="alta_proveedor")}}" enctype="multipart/form-data" method="POST">
     <div class="form-group">
         <div class="col-md-3">
-          <button type="submit" class="btn btn-default">CLIENTE NUEVO</button>
+          <button type="submit" class="btn btn-default">PROVEEDOR NUEVO</button>
         </div>
         </div>
 </form>
