boton con dibujo de carrito

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -28,7 +28,7 @@
                         <h3>Samsung Galaxy J7</h3>
                         <p>Es el nuevo modelo de samsung J7</p>
                         <p>
-                            <a href="{{=URL(c="catalogo",f="index")}}" class="btn btn-primary">Comprar</a> <a href="{{=URL(c="catalogo",f="caracteristicas")}}" class="btn btn-default">Más Info.</a>
+                            <a href="{{=URL(c="catalogo",f="index")}}" class="btn btn-primary">Comprar<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> </a> <a href="{{=URL(c="catalogo",f="caracteristicas")}}" class="btn btn-default">Más Info.</a>
                         </p>
                     </div>
                 </div>
