correccion de vistas de compras

--- a/views/ventas/listado_ventas.html
+++ b/views/ventas/listado_ventas.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+{{extend 'plantilla.html'}}
 <h2>
 VENTAS
 </h2>
@@ -17,5 +17,5 @@ VENTAS
         <TD>Samsung Galaxy J7</TD>
         <TD>$6500</TD>
         <TD>Debito</TD>
-        <TD><a type="button" class="btn btn-default btn-lg">CONFIRMAR PEDIDO</a> - <a type="button" class="btn btn-default btn-lg">CANCELAR PEDIDO</a></TD>
+        <TD><a type="button" class="btn btn-success">CONFIRMAR PEDIDO</a> - <a type="button" class="btn btn-danger">CANCELAR PEDIDO</a></TD>
 </TABLE>
