--- a/views/compras/detalle_compras.html
+++ b/views/compras/detalle_compras.html
@@ -1,8 +1,8 @@
 {{extend 'plantilla.html'}}
 <h1>DETALLE DE COMPRA</h1>
 <div class="form-group">
-    <h4><caption>Nro. Comprobante {{=nro_cbte}} Fecha {{=fecha}} 
-                 Proveedor {{=reg_proveedor.nombre}} 
+    <h4><caption>Nro. Comprobante : {{=nro_cbte}} | Fecha: {{=fecha}} <br>
+                 Proveedor: {{=reg_proveedor.nombre}} 
         </caption></h4>
 </div>
 <form class="form-horizontal" action="{{=URL(c="compras", f="detalle_compras")}}" enctype="multipart/form-data" method="POST">
