--- a/views/carrito/detalle.html
+++ b/views/carrito/detalle.html
@@ -47,8 +47,9 @@
                   </div>
                 <div class="col-sm-2">
                     <select class="form-control" name="forma_pago" id="campo_tipo">
-                      <option>Debito</option>
-                      <option>Credito</option>
+                      <option>Debito - 1 Cuota sin Interes</option>
+                      <option>Visa Credito - 6 Cuotas sin interes</option>
+                      <option>Mastercard Credito - 3 Cuotas sin interes</option>
                     </select>
                 </div>
             <div class="col-xs-6">
