--- a/views/carrito/index.html
+++ b/views/carrito/index.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+{{extend 'plantilla.html'}}
 <div class="right_col" role="main" style="min-height: 1014px;">
 
           <div class="">
@@ -10,7 +10,7 @@
                 <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-left top_search">
                   <div class="input-group">
                     <span class="input-group-btn">
-                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="index")}}">SEGUIR COMPRANDO</a>
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="default",f="index")}}">SEGUIR COMPRANDO</a>
                     </span>
                   </div>
                 </div>
