correccion de botones

--- a/views/catalogo/index.html
+++ b/views/catalogo/index.html
@@ -55,7 +55,7 @@
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="caracteristicas")}}">CARACTERISTICAS</a>
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="catalogo",f="comparacion")}}">COMPARAR</a>
                       </div>
-                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="index")}}">COMPRAR</a>
+                      <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="carrito",f="index")}}">COMPRAR<span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
                       <hr>
                         <a type="button" class="btn btn-default btn-lg" href="{{=URL(c="default",f="index")}}">VOLVER</a>
               </div>
