Nuevo listado estatico

--- a/views/consultas/lista_ventas.html
+++ b/views/consultas/lista_ventas.html
@@ -19,34 +19,12 @@
         <tbody>
             <tr>
                 <th scope="row">15/11/2016</th>
-                <td>Jorge Benitez</td>
+                <td>Lucas Noguera</td>
                 <td>1</td>
                 <td>B</td>
                 <td>$36.75</td>
                 <td>$386.75</td>
-                <td>Efectivo</td>
-               
-                <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
-            </tr>
-            <tr>
-                <th>19/11/2016</th>
-                <td>ProductosMB - Martin Benitez </td> 
-                <td>1</td>
-                <td>A</td>
-                <td>$210</td>
-                <td>$2210</td>
-                <td>Credito</td>
-                <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
-            </tr>
-            <tr>
-                <th>24/11/2016</th>
-                <td>MUAAAAAAAAAAJAJJAJAJAJA- Ivan Zavala</td>
-                <td>2</td>
-                <td>A</td>
-                <td>$189</td>
-                <td>$1989</td>
-                <td>Credito</td>
-                <td><a class="btn btn-default" role="button" href="{{=URL(c="ventas",f="vista_previa",vars={"id":1})}}">Vista Del Comprobante</a>
+                <td>Debito</td>
             </tr>
         </tbody>
         </table>
