--- a/views/consultas/lista_ventas.html
+++ b/views/consultas/lista_ventas.html
@@ -4,7 +4,7 @@
     <div class="form-group">
         <div class="col-md-12">
               <table class="table table-hover">
-              <caption>¡?</caption>
+              <caption></caption>
           <thead>
             <tr>
                 <th>Fecha</th>
